--- a/index.html
+++ b/index.html
@@ -1,10 +1,113 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Hello World</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trent Sterling | Link Tree</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #121212;
+            color: #e0e0e0;
+            text-align: center;
+        }
+        header {
+            margin-bottom: 40px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 4em;
+        }
+        header p {
+            margin: 10px 0;
+            color: #b0b0b0;
+            font-size: 2em;
+        }
+        .links {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        .links li {
+            margin: 20px 0;
+        }
+        .links a {
+            text-decoration: none;
+            color: #d4a5f0;
+            font-size: 2em;
+            padding: 20px;
+            display: block;
+            border-radius: 10px;
+            background-color: #1e1e1e;
+            transition: background-color 0.3s, color 0.3s;
+            font-weight: bold;
+        }
+        .links a:hover {
+            background-color: #d4a5f0;
+            color: #121212;
+        }
+        footer {
+            margin-top: 40px;
+            font-size: 1.5em;
+            color: #b0b0b0;
+        }
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 2.5em;
+            }
+            header p {
+                font-size: 1.5em;
+            }
+            .links a {
+                font-size: 1.2em;
+                padding: 15px;
+            }
+            footer {
+                font-size: 1em;
+            }
+        }
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 2em;
+            }
+            header p {
+                font-size: 1.2em;
+            }
+            .links a {
+                font-size: 1em;
+                padding: 10px;
+            }
+            footer {
+                font-size: 0.9em;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <h1>Trent Sterling</h1>
+        <p>Game Developer & Creator</p>
+    </header>
+    <ul class="links">
+        <li><a href="https://discord.gg/0hyoWZyM6y7kkFCN" target="_blank">Discord Server</a></li>
+        <li><a href="http://trent.itch.io/" target="_blank">Itch Portfolio</a></li>
+        <li><a href="http://trentsterling.com/" target="_blank">Dev Blog</a></li>
+        <li><a href="http://www.twitch.tv/trent_sterling" target="_blank">Twitch</a></li>
+        <li><a href="http://youtube.com/user/MTOMalley" target="_blank">YouTube</a></li>
+        <li><a href="https://github.com/TrentSterling" target="_blank">GitHub</a></li>
+        <li><a href="https://twitter.com/Trent_Sterling" target="_blank">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/trentdev" target="_blank">LinkedIn</a></li>
+        <li><a href="https://trentsterling.github.io/splitter/" target="_blank">Splitter4GPT</a></li>
+    </ul>
+    <footer>
+        <p>&copy; 2024 Trent Sterling. All rights reserved.</p>
+    </footer>
 </body>
 </html>
