--- a/index.html
+++ b/index.html
@@ -4,120 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trent Sterling | 🔗 Link Tree</title>
-    <meta name="description" content="Game Developer and Creator Trent Sterling's official link hub, featuring his work on Discord, Itch.io, Twitch, GitHub, and more.">
+    <meta name="description" content="Trent Sterling is a game developer specializing in Unity, C#, and multiplayer networking. Explore his games, projects, and social links.">
+    <meta name="keywords" content="Trent Sterling, game developer, Unity, C#, VR, multiplayer, networking, procedural generation, shaders, game design, indie games">
     <meta property="og:title" content="Trent Sterling | Game Developer & Creator">
-    <meta property="og:description" content="Discover Trent Sterling's projects, including games, streams, development blogs, and more.">
+    <meta property="og:description" content="Discover Trent Sterling's projects, including multiplayer games, VR experiences, and cutting-edge game development techniques.">
     <meta property="og:url" content="https://trentsterling.com">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Trent Sterling | Game Developer & Creator">
-    <meta name="twitter:description" content="Explore Trent Sterling's work in game development and content creation.">
-
+    <meta name="twitter:description" content="Explore Trent Sterling's work in game development, VR, networking, and content creation.">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        html, body {
-            height: 100%;
-            font-family: Arial, sans-serif;
-            background-color: #121212;
-            color: #e0e0e0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .container {
-            max-width: 600px;
-            width: 100%;
-            text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 100%;
-            padding: 40px 20px;
-        }
-        header h1 {
-            font-size: 4em;
-        }
-        header p {
-            margin: 15px 0 30px;
-            color: #b0b0b0;
-            font-size: 2em;
-        }
-        .section {
-            margin: 40px 0;
-        }
-        .links {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            flex-grow: 1;
-        }
-        .links li {
-            margin: 15px 0;
-        }
-        .links a {
-            text-decoration: none;
-            font-size: 2em;
-            padding: 20px;
-            display: block;
-            border-radius: 10px;
-            transition: background-color 0.3s, color 0.3s;
-            font-weight: bold;
-        }
-        .links a.game {
-            color: #e67e22; /* Orange color for games */
-            background-color: #1e1e1e;
-        }
-        .links a.game:hover {
-            background-color: #e67e22; /* Orange hover */
-            color: #121212;
-        }
-        .links a.social {
-            color: #d4a5f0; /* Purple color for socials */
-            background-color: #1e1e1e;
-        }
-        .links a.social:hover {
-            background-color: #d4a5f0; /* Purple hover */
-            color: #121212;
-        }
-        footer {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #b0b0b0;
-        }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        html, body { height: 100%; font-family: Arial, sans-serif; background-color: #121212; color: #e0e0e0; display: flex; justify-content: center; align-items: center; }
+        .container { max-width: 600px; width: 100%; text-align: center; display: flex; flex-direction: column; justify-content: space-between; height: 100%; padding: 40px 20px; }
+        header h1 { font-size: 4em; }
+        header p { margin: 15px 0 30px; color: #b0b0b0; font-size: 2em; }
+        .section { margin: 40px 0; }
+        .section p { font-size: 1.5em; }
+        .links { list-style: none; padding: 0; display: flex; flex-direction: column; justify-content: center; flex-grow: 1; }
+        .links li { margin: 15px 0; }
+        .links a { text-decoration: none; font-size: 2em; padding: 20px; display: block; border-radius: 10px; transition: background-color 0.3s, color 0.3s; font-weight: bold; }
+        .links a.game { color: #e67e22; background-color: #1e1e1e; }
+        .links a.game:hover { background-color: #e67e22; color: #121212; }
+        .links a.social { color: #d4a5f0; background-color: #1e1e1e; }
+        .links a.social:hover { background-color: #d4a5f0; color: #121212; }
+        footer { margin-top: 20px; font-size: 1.2em; color: #b0b0b0; }
         @media (max-width: 768px) {
-            header h1 {
-                font-size: 3em;
-            }
-            header p {
-                font-size: 1.8em;
-            }
-            .links a {
-                font-size: 1.5em;
-                padding: 15px;
-            }
-            footer {
-                font-size: 1em;
-            }
+            header h1 { font-size: 3em; }
+            header p { font-size: 1.8em; }
+            .links a { font-size: 1.5em; padding: 15px; }
+            footer { font-size: 1em; }
         }
         @media (max-width: 480px) {
-            header h1 {
-                font-size: 2.5em;
-            }
-            header p {
-                font-size: 1.5em;
-            }
-            .links a {
-                font-size: 1.2em;
-                padding: 10px;
-            }
-            footer {
-                font-size: 0.9em;
-            }
+            header h1 { font-size: 2.5em; }
+            header p { font-size: 1.5em; }
+            .links a { font-size: 1.2em; padding: 10px; }
+            footer { font-size: 0.9em; }
         }
     </style>
 </head>
@@ -127,7 +48,10 @@
             <h1>Trent Sterling 🔗</h1>
             <p>Game Developer & Creator</p>
         </header>
-
+        <div class="section">
+            <h2>About Me</h2>
+            <p>I'm Trent Sterling, a game developer with almost 10 years of experience, specializing in Unity, C#, and multiplayer networking. I've worked on everything from Minecraft mods to Garry's Mod gamemodes and educational games. My focus is on creating solid gameplay, efficient networking, and high-performance VR experiences at 120hz. I'm constantly pushing the boundaries of game tech, exploring network traffic optimization, shaders, and procedural generation.</p>
+        </div>
         <div class="section">
             <h2>Games & Projects</h2>
             <ul class="links">
@@ -136,7 +60,6 @@
                 <li><a class="game" href="https://trentsterling.github.io/splitter/" target="_blank">Splitter4GPT</a></li>
             </ul>
         </div>
-
         <div class="section">
             <h2>Social Links</h2>
             <ul class="links">
@@ -150,7 +73,6 @@
                 <li><a class="social" href="https://www.linkedin.com/in/trentdev" target="_blank">LinkedIn</a></li>
             </ul>
         </div>
-
         <footer>
             <p>&copy; 2024 Trent Sterling. All rights reserved.</p>
         </footer>
