--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <meta property="og:title" content="Trent Sterling | Game Developer & Creator">
     <meta property="og:description" content="Discover Trent Sterling's projects, including multiplayer games, VR experiences, and cutting-edge game development techniques.">
     <meta property="og:url" content="https://trentsterling.com">
+    <meta property="og:image" content="https://blog.tront.xyz/assets/img/tront.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="400">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Trent Sterling | Game Developer & Creator">
     <meta name="twitter:description" content="Explore Trent Sterling's work in game development, VR, networking, and content creation.">
+    <meta name="twitter:image" content="https://blog.tront.xyz/assets/img/tront.png">
+    <link rel="icon" href="https://blog.tront.xyz/assets/img/tront.png" type="image/png">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         html, body { height: 100%; font-family: Arial, sans-serif; background-color: #121212; color: #e0e0e0; display: flex; justify-content: center; align-items: center; }
@@ -24,6 +30,8 @@
         .links { list-style: none; padding: 0; display: flex; flex-direction: column; justify-content: center; flex-grow: 1; }
         .links li { margin: 1.5rem 0; }
         .links a { text-decoration: none; font-size: 2.25rem; padding: 1.875rem; display: block; border-radius: 0.9375rem; transition: background-color 0.3s, color 0.3s; font-weight: bold; }
+        .links a.blog { color: #1e90ff; background-color: #1e1e1e; }
+        .links a.blog:hover { background-color: #1e90ff; color: #121212; }
         .links a.game { color: #e67e22; background-color: #1e1e1e; }
         .links a.game:hover { background-color: #e67e22; color: #121212; }
         .links a.social { color: #d4a5f0; background-color: #1e1e1e; }
@@ -41,20 +49,84 @@
             .links a { font-size: 1.6875rem; padding: 1.125rem; }
             footer { font-size: 1.125rem; }
         }
+        ul {
+            font-size: 1.5rem;
+        }
+
+        ul li {
+            font-size: 1.5rem;
+        }
+        .container {
+            max-width: 100%;
+            width: 100%;
+        }
+
+        @media (min-width: 800px) {
+            .container {
+                padding: 5rem;
+            }
+            .links a {
+                text-decoration: none;
+                font-size: 2.25rem;
+                padding: 1.875rem;
+                display: block;
+                border-radius: 0.9375rem;
+                transition: background-color 0.3s, color 0.3s;
+                font-weight: bold;
+                max-width: 800px;
+                width: 100%;
+                margin: 0 auto;
+            }
+
+            header img.logo {
+                max-width: 100px;
+                height: auto;
+                margin-bottom: 1.5rem;
+            }
+
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
         <header>
+            <img src="https://blog.tront.xyz/assets/img/tront.png" alt="Trent Sterling Logo" class="logo">
             <h1>Trent Sterling 🔗</h1>
             <p>Game Developer & Creator</p>
         </header>
+
         <div class="section">
             <h2>About Me</h2>
             <div class="about-me">
-                <p>I'm Trent Sterling, a game developer with almost 10 years of experience, specializing in Unity, C#, and multiplayer networking. I've worked on everything from Minecraft mods to Garry's Mod gamemodes and educational games.</p>
+                <p>I'm Trent Sterling, a game developer with over 10 years of experience, specializing in Unity, C#, and multiplayer networking. I’ve worked on projects ranging from Minecraft mods to Garry's Mod gamemodes and educational games.</p>
                 <p>My focus is on creating solid gameplay, efficient networking, and high-performance VR experiences at 120hz. I'm constantly pushing the boundaries of game tech, exploring network traffic optimization, shaders, and procedural generation.</p>
+                <h3>My Focus Areas</h3>
+                <ul>
+                    <li><strong>Unity & C#</strong> – Creating high-performance systems for gameplay, AI, and multiplayer.</li>
+                    <li><strong>Shaders & Procedural Generation</strong> – Designing dynamic worlds and custom shaders, particularly for VR.</li>
+                    <li><strong>VR Optimization</strong> – Ensuring smooth, immersive VR experiences at 120Hz+.</li>
+                    <li><strong>Multiplayer Systems</strong> – Building scalable cross-platform multiplayer with optimized network traffic, including crossplay between PC, Android, and Oculus Quest.</li>
+                    <li><strong>NodeJS & Web Development</strong> – Back into web dev with a focus on NodeJS, Phaser, and IoT integration.</li>
+                </ul>
+                <h3>My Background</h3>
+                <p>I started with Halo CE/2 modding and later worked on Minecraft mods and Garry’s Mod gamemodes. These early experiences taught me game mechanics, scripting, and community-driven development.</p>
+                <p>I’ve since focused on indie game development and multiplayer games, especially VR performance optimization and network traffic optimization for smoother gameplay.</p>
+                <p>I’ve also explored machine learning, IoT, and home automation, constantly expanding my skill set.</p>
+                <h3>Random Skills</h3>
+                <ul>
+                    <li>Videography – Creating devlogs, tutorials, and trailers.</li>
+                    <li>Web Design – Building minimalist, user-friendly sites.</li>
+                    <li>3D Modeling – Asset creation and optimization using Blender.</li>
+                    <li>Photoshop – Graphics, textures, and visual assets for games.</li>
+                </ul>
             </div>
+        </div>
+        <div class="section">
+            <h2>Blog</h2>
+            <ul class="links">
+                <li><a class="blog" href="https://blog.tront.xyz" target="_blank">Tront Dev Blog</a></li>
+            </ul>
         </div>
         <div class="section">
             <h2>Games & Projects</h2>
@@ -62,24 +134,29 @@
                 <li><a class="game" href="https://monke.tront.xyz" target="_blank">MonkePortals</a></li>
                 <li><a class="game" href="https://punk.tront.xyz" target="_blank">HackerPunk</a></li>
                 <li><a class="game" href="https://trentsterling.github.io/splitter/" target="_blank">Splitter4GPT</a></li>
+                <li><a class="game" href="https://trent.itch.io/" target="_blank">View All My Games on itch.io</a></li>
             </ul>
         </div>
         <div class="section">
             <h2>Social Links</h2>
             <ul class="links">
                 <li><a class="social" href="https://discord.gg/0hyoWZyM6y7kkFCN" target="_blank">Discord Server</a></li>
-                <li><a class="social" href="http://trent.itch.io/" target="_blank">Itch Portfolio</a></li>
-                <li><a class="social" href="http://trentsterling.com/" target="_blank">Dev Blog</a></li>
-                <li><a class="social" href="http://www.twitch.tv/trent_sterling" target="_blank">Twitch</a></li>
                 <li><a class="social" href="http://youtube.com/user/MTOMalley" target="_blank">YouTube</a></li>
+                <li><a class="social" href="http://www.twitch.tv/trent_sterling" target="_blank">Twitch</a></li>
                 <li><a class="social" href="https://github.com/TrentSterling" target="_blank">GitHub</a></li>
                 <li><a class="social" href="https://twitter.com/Trent_Sterling" target="_blank">Twitter</a></li>
                 <li><a class="social" href="https://www.linkedin.com/in/trentdev" target="_blank">LinkedIn</a></li>
+                <li><a class="social" href="http://trent.itch.io/" target="_blank">Itch Portfolio</a></li>
+                <li><a class="social" href="http://trentsterling.com/" target="_blank">Old Dev Blog</a></li>
             </ul>
         </div>
         <footer>
-            <p>&copy; 2025 Trent Sterling. All rights reserved.</p>
+            <p>&copy; <span id="current-year"></span> Trent Sterling. All rights reserved.</p>
         </footer>
+
+        <script>
+            document.getElementById('current-year').textContent = new Date().getFullYear();
+        </script>
     </div>
 </body>
 </html>
