--- a/index.html
+++ b/index.html
@@ -3,30 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trent Sterling | 🔗 Link Tree</title>
-    <meta name="description" content="Trent Sterling is a game developer specializing in Unity, C#, and multiplayer networking. Explore his games, projects, and social links.">
-    <meta name="keywords" content="Trent Sterling, game developer, Unity, C#, VR, multiplayer, networking, procedural generation, shaders, game design, indie games">
-    <meta property="og:title" content="Trent Sterling | Game Developer & Creator">
-    <meta property="og:description" content="Discover Trent Sterling's projects, including multiplayer games, VR experiences, and cutting-edge game development techniques.">
+    <title>Trent Sterling (Tront) | 🔗 Link Tree</title>
+    <meta name="description" content="Trent Sterling (Tront) is a game developer specializing in Unity, C#, and multiplayer networking. Explore his games, projects, and social links.">
+    <meta name="keywords" content="Trent Sterling, Tront, game developer, Unity, C#, VR, multiplayer, networking, procedural generation, shaders, game design, indie games">
+    <meta property="og:title" content="Trent Sterling (Tront) | Game Developer & Creator">
+    <meta property="og:description" content="Discover Trent Sterling's (Tront) projects, including multiplayer games, VR experiences, and cutting-edge game development techniques.">
     <meta property="og:url" content="https://trentsterling.com">
     <meta property="og:image" content="https://blog.tront.xyz/assets/img/tront.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="400">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Trent Sterling | Game Developer & Creator">
-    <meta name="twitter:description" content="Explore Trent Sterling's work in game development, VR, networking, and content creation.">
+    <meta name="twitter:title" content="Trent Sterling (Tront) | Game Developer & Creator">
+    <meta name="twitter:description" content="Explore Trent Sterling's (Tront) work in game development, VR, networking, and content creation.">
     <meta name="twitter:image" content="https://blog.tront.xyz/assets/img/tront.png">
     <link rel="icon" href="https://blog.tront.xyz/assets/img/tront.png" type="image/png">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         html, body { height: 100%; font-family: Arial, sans-serif; background-color: #121212; color: #e0e0e0; display: flex; justify-content: center; align-items: center; }
         .container { max-width: 56.25rem; width: 100%; text-align: center; display: flex; flex-direction: column; justify-content: space-between; height: 100%; padding: 3.75rem 1.875rem; }
+        header img.logo { max-width: 100px; height: auto; margin-bottom: 1.5rem; }
         header h1 { font-size: 4.5rem; }
         header p { margin: 1.5rem 0 2.8125rem; color: #b0b0b0; font-size: 2.25rem; }
         .section { margin: 3.75rem 0; }
+        .section h2 { font-size: 2.5rem; margin-bottom: 1.5rem; }
         .section p { font-size: 1.6875rem; margin-bottom: 1.875rem; }
         .about-me { max-width: 75rem; text-align: left; margin: 0 auto; }
+        .about-me h3 { font-size: 2rem; margin-top: 2rem; margin-bottom: 1rem; }
+        .about-me ul { list-style: disc; margin-left: 2.5rem; }
+        .about-me p { font-size: 1.5rem; line-height: 1.6; margin-bottom: 1.25rem; }
+        .about-me ul li { font-size: 1.5rem; margin-bottom: 0.75rem; }
         .links { list-style: none; padding: 0; display: flex; flex-direction: column; justify-content: center; flex-grow: 1; }
         .links li { margin: 1.5rem 0; }
         .links a { text-decoration: none; font-size: 2.25rem; padding: 1.875rem; display: block; border-radius: 0.9375rem; transition: background-color 0.3s, color 0.3s; font-weight: bold; }
@@ -40,50 +46,40 @@
         @media (max-width: 48rem) {
             header h1 { font-size: 3.375rem; }
             header p { font-size: 1.6875rem; }
+            .section h2 { font-size: 2rem; }
+            .about-me h3 { font-size: 1.75rem; }
+            .about-me p, .about-me ul li { font-size: 1.3rem; }
             .links a { font-size: 1.875rem; padding: 1.5rem; }
             footer { font-size: 1.3125rem; }
         }
         @media (max-width: 30rem) {
             header h1 { font-size: 3rem; }
             header p { font-size: 1.5rem; }
+            .section h2 { font-size: 1.8rem; }
+            .about-me h3 { font-size: 1.5rem; }
+            .about-me p, .about-me ul li { font-size: 1.2rem; }
             .links a { font-size: 1.6875rem; padding: 1.125rem; }
             footer { font-size: 1.125rem; }
-        }
-        ul {
-            font-size: 1.5rem;
-        }
-
-        ul li {
-            font-size: 1.5rem;
         }
         .container {
             max-width: 100%;
             width: 100%;
+            padding: 3.75rem 1rem;
         }
-
         @media (min-width: 800px) {
             .container {
                 padding: 5rem;
+                max-width: 56.25rem;
+            }
+            .links {
+                align-items: center;
             }
             .links a {
-                text-decoration: none;
-                font-size: 2.25rem;
-                padding: 1.875rem;
-                display: block;
-                border-radius: 0.9375rem;
-                transition: background-color 0.3s, color 0.3s;
-                font-weight: bold;
                 max-width: 800px;
-                width: 100%;
-                margin: 0 auto;
+                width: 90%;
+                margin-left: auto;
+                margin-right: auto;
             }
-
-            header img.logo {
-                max-width: 100px;
-                height: auto;
-                margin-bottom: 1.5rem;
-            }
-
         }
     </style>
 </head>
@@ -91,15 +87,15 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://blog.tront.xyz/assets/img/tront.png" alt="Trent Sterling Logo" class="logo">
-            <h1>Trent Sterling 🔗</h1>
-            <p>Game Developer & Creator</p>
+            <img src="https://blog.tront.xyz/assets/img/tront.png" alt="Trent Sterling (Tront) Logo" class="logo">
+            <h1>Trent Sterling (Tront) 🔗</h1>
+            <p>Game Developer & Creator (aka Tront)</p>
         </header>
 
         <div class="section">
             <h2>About Me</h2>
             <div class="about-me">
-                <p>I'm Trent Sterling, a game developer with over 10 years of experience, specializing in Unity, C#, and multiplayer networking. I’ve worked on projects ranging from Minecraft mods to Garry's Mod gamemodes and educational games.</p>
+                <p>I'm <strong>Trent Sterling</strong> (also known as <strong>Tront</strong>), a game developer with over 10 years of experience, specializing in Unity, C#, and multiplayer networking. I’ve worked on projects ranging from Minecraft mods to Garry's Mod gamemodes and educational games.</p>
                 <p>My focus is on creating solid gameplay, efficient networking, and high-performance VR experiences at 120hz. I'm constantly pushing the boundaries of game tech, exploring network traffic optimization, shaders, and procedural generation.</p>
                 <h3>My Focus Areas</h3>
                 <ul>
@@ -125,15 +121,15 @@
         <div class="section">
             <h2>Blog</h2>
             <ul class="links">
-                <li><a class="blog" href="https://blog.tront.xyz" target="_blank">Tront Dev Blog</a></li>
+                <li><a class="blog" href="https://blog.tront.xyz" target="_blank">Tront Dev Blog (tront.xyz)</a></li>
             </ul>
         </div>
         <div class="section">
             <h2>Games & Projects</h2>
             <ul class="links">
-                <li><a class="game" href="https://monke.tront.xyz" target="_blank">MonkePortals</a></li>
-                <li><a class="game" href="https://punk.tront.xyz" target="_blank">HackerPunk</a></li>
-                <li><a class="game" href="https://trentsterling.github.io/splitter/" target="_blank">Splitter4GPT</a></li>
+                <li><a class="game" href="https://monke.tront.xyz" target="_blank">MonkePortals (VR Game)</a></li>
+                <li><a class="game" href="https://punk.tront.xyz" target="_blank">HackerPunk (Concept)</a></li>
+                <li><a class="game" href="https://trentsterling.github.io/splitter/" target="_blank">Splitter4GPT (Tool)</a></li>
                 <li><a class="game" href="https://trent.itch.io/" target="_blank">View All My Games on itch.io</a></li>
             </ul>
         </div>
@@ -144,14 +140,14 @@
                 <li><a class="social" href="http://youtube.com/user/MTOMalley" target="_blank">YouTube</a></li>
                 <li><a class="social" href="http://www.twitch.tv/trent_sterling" target="_blank">Twitch</a></li>
                 <li><a class="social" href="https://github.com/TrentSterling" target="_blank">GitHub</a></li>
-                <li><a class="social" href="https://twitter.com/Trent_Sterling" target="_blank">Twitter</a></li>
+                <li><a class="social" href="https://twitter.com/Trent_Sterling" target="_blank">Twitter (@Trent_Sterling)</a></li>
                 <li><a class="social" href="https://www.linkedin.com/in/trentdev" target="_blank">LinkedIn</a></li>
                 <li><a class="social" href="http://trent.itch.io/" target="_blank">Itch Portfolio</a></li>
                 <li><a class="social" href="http://trentsterling.com/" target="_blank">Old Dev Blog</a></li>
             </ul>
         </div>
         <footer>
-            <p>&copy; <span id="current-year"></span> Trent Sterling. All rights reserved.</p>
+            <p>© <span id="current-year"></span> Trent Sterling (Tront). All rights reserved.</p>
         </footer>
 
         <script>
