--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,17 +23,11 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         html, body { height: 100%; font-family: Arial, sans-serif; background-color: #121212; color: #e0e0e0; display: flex; justify-content: center; align-items: center; }
         .container { max-width: 56.25rem; width: 100%; text-align: center; display: flex; flex-direction: column; justify-content: space-between; height: 100%; padding: 3.75rem 1.875rem; }
-        header img.logo { max-width: 100px; height: auto; margin-bottom: 1.5rem; }
         header h1 { font-size: 4.5rem; }
         header p { margin: 1.5rem 0 2.8125rem; color: #b0b0b0; font-size: 2.25rem; }
         .section { margin: 3.75rem 0; }
-        .section h2 { font-size: 2.5rem; margin-bottom: 1.5rem; }
         .section p { font-size: 1.6875rem; margin-bottom: 1.875rem; }
         .about-me { max-width: 75rem; text-align: left; margin: 0 auto; }
-        .about-me h3 { font-size: 2rem; margin-top: 2rem; margin-bottom: 1rem; }
-        .about-me ul { list-style: disc; margin-left: 2.5rem; }
-        .about-me p { font-size: 1.5rem; line-height: 1.6; margin-bottom: 1.25rem; }
-        .about-me ul li { font-size: 1.5rem; margin-bottom: 0.75rem; }
         .links { list-style: none; padding: 0; display: flex; flex-direction: column; justify-content: center; flex-grow: 1; }
         .links li { margin: 1.5rem 0; }
         .links a { text-decoration: none; font-size: 2.25rem; padding: 1.875rem; display: block; border-radius: 0.9375rem; transition: background-color 0.3s, color 0.3s; font-weight: bold; }
@@ -46,42 +41,53 @@
         @media (max-width: 48rem) {
             header h1 { font-size: 3.375rem; }
             header p { font-size: 1.6875rem; }
-            .section h2 { font-size: 2rem; }
-            .about-me h3 { font-size: 1.75rem; }
-            .about-me p, .about-me ul li { font-size: 1.3rem; }
             .links a { font-size: 1.875rem; padding: 1.5rem; }
             footer { font-size: 1.3125rem; }
         }
         @media (max-width: 30rem) {
             header h1 { font-size: 3rem; }
             header p { font-size: 1.5rem; }
-            .section h2 { font-size: 1.8rem; }
-            .about-me h3 { font-size: 1.5rem; }
-            .about-me p, .about-me ul li { font-size: 1.2rem; }
             .links a { font-size: 1.6875rem; padding: 1.125rem; }
             footer { font-size: 1.125rem; }
+        }
+        ul {
+            font-size: 1.5rem;
+        }
+
+        ul li {
+            font-size: 1.5rem;
         }
         .container {
             max-width: 100%;
             width: 100%;
-            padding: 3.75rem 1rem;
         }
+
         @media (min-width: 800px) {
             .container {
                 padding: 5rem;
-                max-width: 56.25rem;
-            }
-            .links {
-                align-items: center;
             }
             .links a {
+                text-decoration: none;
+                font-size: 2.25rem;
+                padding: 1.875rem;
+                display: block;
+                border-radius: 0.9375rem;
+                transition: background-color 0.3s, color 0.3s;
+                font-weight: bold;
                 max-width: 800px;
-                width: 90%;
-                margin-left: auto;
-                margin-right: auto;
+                width: 100%;
+                margin: 0 auto;
             }
+
+            header img.logo {
+                max-width: 100px;
+                height: auto;
+                margin-bottom: 1.5rem;
+            }
+
         }
     </style>
+
 </head>
 
 <body>
@@ -127,9 +133,9 @@
         <div class="section">
             <h2>Games & Projects</h2>
             <ul class="links">
-                <li><a class="game" href="https://monke.tront.xyz" target="_blank">MonkePortals (VR Game)</a></li>
-                <li><a class="game" href="https://punk.tront.xyz" target="_blank">HackerPunk (Concept)</a></li>
-                <li><a class="game" href="https://trentsterling.github.io/splitter/" target="_blank">Splitter4GPT (Tool)</a></li>
+                <li><a class="game" href="https://monke.tront.xyz" target="_blank">MonkePortals</a></li>
+                <li><a class="game" href="https://punk.tront.xyz" target="_blank">HackerPunk</a></li>
+                <li><a class="game" href="https://trentsterling.github.io/splitter/" target="_blank">Splitter4GPT</a></li>
                 <li><a class="game" href="https://trent.itch.io/" target="_blank">View All My Games on itch.io</a></li>
             </ul>
         </div>
