Update index.html and css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +7,7 @@
     <meta name="description" content="Trent Sterling (Tront) is a game developer specializing in Unity, C#, and multiplayer networking. Explore his games, projects, and social links.">
     <meta name="keywords" content="Trent Sterling, Tront, game developer, Unity, C#, VR, multiplayer, networking, procedural generation, shaders, game design, indie games">
     <meta property="og:title" content="Trent Sterling (Tront) | Game Developer & Creator">
-    <meta property="og:description" content="Discover Trent Sterling's (Tront) projects, including multiplayer games, VR experiences, and cutting-edge game development techniques.">
+    <meta property="og:description" content="Discover Trent Sterling's projects, including multiplayer games, VR experiences, and cutting-edge game development techniques.">
     <meta property="og:url" content="https://trentsterling.com">
     <meta property="og:image" content="https://blog.tront.xyz/assets/img/tront.png">
     <meta property="og:image:type" content="image/png">
@@ -16,7 +15,7 @@
     <meta property="og:image:height" content="400">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Trent Sterling (Tront) | Game Developer & Creator">
-    <meta name="twitter:description" content="Explore Trent Sterling's (Tront) work in game development, VR, networking, and content creation.">
+    <meta name="twitter:description" content="Explore Trent Sterling's work in game development, VR, networking, and content creation.">
     <meta name="twitter:image" content="https://blog.tront.xyz/assets/img/tront.png">
     <link rel="icon" href="https://blog.tront.xyz/assets/img/tront.png" type="image/png">
     <style>
@@ -93,15 +92,15 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://blog.tront.xyz/assets/img/tront.png" alt="Trent Sterling (Tront) Logo" class="logo">
+            <img src="https://blog.tront.xyz/assets/img/tront.png" alt="Tront Logo" class="logo">
             <h1>Trent Sterling (Tront) 🔗</h1>
-            <p>Game Developer & Creator (aka Tront)</p>
+            <p>Game Developer & Creator</p>
         </header>
 
         <div class="section">
             <h2>About Me</h2>
             <div class="about-me">
-                <p>I'm <strong>Trent Sterling</strong> (also known as <strong>Tront</strong>), a game developer with over 10 years of experience, specializing in Unity, C#, and multiplayer networking. I’ve worked on projects ranging from Minecraft mods to Garry's Mod gamemodes and educational games.</p>
+                <p>I'm Trent Sterling (Tront), a game developer with over 10 years of experience, specializing in Unity, C#, and multiplayer networking. I’ve worked on projects ranging from Minecraft mods to Garry's Mod gamemodes and educational games.</p>
                 <p>My focus is on creating solid gameplay, efficient networking, and high-performance VR experiences at 120hz. I'm constantly pushing the boundaries of game tech, exploring network traffic optimization, shaders, and procedural generation.</p>
                 <h3>My Focus Areas</h3>
                 <ul>
@@ -127,7 +126,7 @@
         <div class="section">
             <h2>Blog</h2>
             <ul class="links">
-                <li><a class="blog" href="https://blog.tront.xyz" target="_blank">Tront Dev Blog (tront.xyz)</a></li>
+                <li><a class="blog" href="https://blog.tront.xyz" target="_blank">Tront Dev Blog</a></li>
             </ul>
         </div>
         <div class="section">
