add bluesky link

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
                 <ul class="links">
                     <li><a class="social" href="https://discord.gg/0hyoWZyM6y7kkFCN" target="_blank">Discord Server</a></li>
                     <li><a class="social" href="http://youtube.com/user/MTOMalley" target="_blank">YouTube</a></li>
+                    <li><a class="social" href="https://bsky.app/profile/tront.xyz" target="_blank">Bluesky</a></li>
                     <li><a class="social" href="http://www.twitch.tv/trent_sterling" target="_blank">Twitch</a></li>
                     <li><a class="social" href="https://github.com/TrentSterling" target="_blank">GitHub</a></li>
                     <li><a class="social" href="https://twitter.com/Trent_Sterling" target="_blank">Twitter (@Trent_Sterling)</a></li>
