--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trent Sterling (Tront) - Game Developer Portfolio | Unity, C#, VR, Links Hub</title>
-    <meta name="description" content="Explore the game development portfolio and links hub of Trent Sterling (Tront). Expert Unity, C#, VR, and multiplayer gamedev with 10+ years experience. Discover projects, dev blog, and social connections.">
+    <title>Trent Sterling (Tront) - Game Developer | Unity, C#, VR, Networking</title>
+    <meta name="description" content="I'm Trent Sterling (Tront), a game developer with over 10 years of experience specializing in Unity, C#, VR, and multiplayer networking. Discover my projects, dev blog, and links.">
     <meta name="keywords" content="Trent Sterling, Tront, game developer, gamedev, Unity, C#, VR, multiplayer, networking, procedural generation, shaders, game design, indie games, portfolio, links, links hub, link tree, developer portfolio">
     <link rel="canonical" href="https://tront.xyz/" />
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tront.xyz/">
-    <meta property="og:title" content="Trent Sterling (Tront) - Game Developer Portfolio & Links Hub">
-    <meta property="og:description" content="Discover Trent Sterling (Tront)'s work in game development: Unity, C#, VR, multiplayer networking, procedural generation. Central hub for projects, blog, and social links.">
+    <meta property="og:title" content="Trent Sterling (Tront) - Game Developer | Unity, C#, VR, Networking">
+    <meta property="og:description" content="I'm Trent Sterling (Tront), a game developer with over 10 years of experience specializing in Unity, C#, VR, and multiplayer networking. Discover my projects, dev blog, and links.">
     <meta property="og:image" content="https://blog.tront.xyz/assets/img/tront.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="400">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://tront.xyz/">
-    <meta name="twitter:title" content="Trent Sterling (Tront) - Game Developer Portfolio & Links Hub">
-    <meta name="twitter:description" content="Explore Trent Sterling (Tront)'s game development portfolio. Specializing in Unity, C#, VR, and multiplayer systems. Find projects, dev blog, and social links here.">
+    <meta name="twitter:title" content="Trent Sterling (Tront) - Game Developer | Unity, C#, VR, Networking">
+    <meta name="twitter:description" content="I'm Trent Sterling (Tront), a game developer with over 10 years of experience specializing in Unity, C#, VR, and multiplayer networking. Discover my projects, dev blog, and links.">
     <meta name="twitter:image" content="https://blog.tront.xyz/assets/img/tront.png">
     <link rel="icon" href="https://blog.tront.xyz/assets/img/tront.png" type="image/png">
     <style>
@@ -83,8 +82,8 @@
         .container { max-width: 100%; width: 100%; }
         @media (min-width: 800px) {
             .container { padding: 0.5rem 2rem 1rem 2rem; max-width: 56.25rem;}
-            .links a { max-width: 24rem; } /* Reduced max-width */
-            .blurb { max-width: 24rem; } /* Reduced max-width */
+            .links a { max-width: 24rem; } 
+            .blurb { max-width: 24rem; } 
         }
     </style>
     <script type="application/ld+json">
@@ -133,8 +132,7 @@
                  <h2>About Me</h2>
                  <div class="about-me">
                       <p>
-                        <strong>Welcome! I'm Trent Sterling (Tront), a passionate game developer (gamedev) with over 10 years crafting experiences in Unity and C#.</strong>
-                        My core focus? High-performance VR (120Hz+), robust multiplayer networking, and solid gameplay systems. This page is my central hub - a portfolio and 'Link Tree' connecting you to my projects, dev blog insights, and online profiles. If you seek technical excellence in Unity, VR, and online games, you're here.
+                        <strong>I'm Trent Sterling (Tront), a game developer with over 10 years of experience specializing in Unity, C#, VR, and multiplayer networking.</strong> This page serves as my central hub, connecting you to my portfolio, projects, dev blog insights, and online profiles. My expertise lies in high-performance VR (120Hz+), robust multiplayer networking, and solid gameplay systems. If you seek technical excellence in Unity, VR, and online games, you're here.
                      </p>
                      <p>My journey started modding Halo CE/2, Minecraft, and Garry's Mod. These taught me game mechanics, scripting, and community-driven development.</p>
                      <h3>My Core Focus Areas</h3>
